--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base target="_top">
     <title>Architecture Decision Records</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
         :root {
             --color-bg-primary: #f8f1ee;
@@ -40,16 +40,19 @@
             line-height: 1.6;
             font-weight: 400;
             min-height: 100vh;
+            margin: 0;
+            padding: 0;
         }
 
         .app-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
+            max-width: 100%;
+            margin: 0;
+            padding: 1.5rem 2rem;
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 2.5rem;
+            grid-template-columns: 450px 1fr;
+            gap: 3rem;
             min-height: 100vh;
+            width: 100%;
         }
 
         .left-panel {
@@ -91,16 +94,20 @@
         }
 
         .app-title {
-            font-size: 2rem;
-            font-weight: 700;
+            font-family: 'Poppins', sans-serif;
+            font-size: 2.5rem;
+            font-weight: 800;
             margin-bottom: 0.5rem;
-            letter-spacing: -0.025em;
+            letter-spacing: -0.02em;
+            line-height: 1.2;
         }
 
         .app-subtitle {
+            font-family: 'Inter', sans-serif;
             font-size: 1.1rem;
             opacity: 0.9;
             font-weight: 300;
+            letter-spacing: 0.01em;
         }
 
         .stats-grid {
@@ -147,23 +154,18 @@
         }
 
         .form-title {
-            font-size: 1.25rem;
+            font-family: 'Poppins', sans-serif;
+            font-size: 1.4rem;
             font-weight: 600;
             color: var(--color-text-primary);
             display: flex;
             align-items: center;
             gap: 0.75rem;
+            letter-spacing: -0.01em;
         }
 
         .form-title-icon {
-            width: 24px;
-            height: 24px;
-            background: linear-gradient(135deg, var(--color-secondary), var(--color-primary));
-            border-radius: 6px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.875rem;
+            display: none;
         }
 
         .form-body {
@@ -307,13 +309,15 @@
         }
 
         .records-title {
-            font-size: 1.25rem;
+            font-family: 'Poppins', sans-serif;
+            font-size: 1.4rem;
             font-weight: 600;
             color: var(--color-text-primary);
             display: flex;
             align-items: center;
             justify-content: space-between;
             margin-bottom: 1.5rem;
+            letter-spacing: -0.01em;
         }
 
         .records-count {
@@ -337,7 +341,7 @@
 
         .search-input {
             width: 100%;
-            padding: 0.75rem 1rem 0.75rem 2.5rem;
+            padding: 0.75rem 1rem;
             border: 2px solid var(--color-accent);
             border-radius: var(--border-radius);
             font-size: 0.875rem;
@@ -364,6 +368,7 @@
             transform: translateY(-50%);
             color: var(--color-text-muted);
             font-size: 1rem;
+            display: none;
         }
 
         .clear-search {
@@ -468,21 +473,21 @@
         .records-list {
             flex: 1;
             overflow-y: auto;
-            padding: 1rem;
+            padding: 0.25rem;
         }
 
         .record-item {
             background: var(--color-bg-tertiary);
             border: 1px solid var(--color-accent);
             border-radius: var(--border-radius);
-            margin-bottom: 1rem;
+            margin-bottom: 0.25rem;
             transition: var(--transition);
             overflow: hidden;
             position: relative;
         }
 
         .record-item:hover {
-            transform: translateY(-2px);
+            transform: translateY(-1px);
             box-shadow: var(--shadow-sm);
             border-color: var(--color-secondary);
         }
@@ -498,80 +503,95 @@
         }
 
         .record-content {
-            padding: 1.5rem;
-            padding-left: 2rem;
+            padding: 0.5rem 0.75rem;
+            padding-left: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 1rem;
+        }
+
+        .record-main-info {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            flex: 1;
+            min-width: 0;
         }
 
         .record-name {
-            font-size: 1rem;
+            font-size: 0.85rem;
             font-weight: 600;
             color: var(--color-text-primary);
-            margin-bottom: 0.5rem;
-            line-height: 1.4;
-        }
-
-        .record-meta {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            margin-bottom: 1rem;
-            font-size: 0.8rem;
-            color: var(--color-text-muted);
-        }
-
-        .meta-item {
-            display: flex;
-            align-items: center;
-            gap: 0.375rem;
-        }
-
-        .meta-icon {
-            width: 16px;
-            height: 16px;
-            opacity: 0.7;
+            margin: 0;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            min-width: 0;
         }
 
         .project-name {
             display: inline-flex;
             align-items: center;
-            gap: 0.5rem;
             background: linear-gradient(135deg, var(--color-secondary), var(--color-primary));
             color: white;
-            padding: 0.375rem 1rem;
-            border-radius: var(--border-radius);
-            font-size: 0.8rem;
+            padding: 0.125rem 0.4rem;
+            border-radius: 4px;
+            font-size: 0.6rem;
             font-weight: 600;
-            margin-bottom: 1rem;
+            line-height: 1;
+            white-space: nowrap;
+            flex-shrink: 0;
+        }
+
+        .record-meta {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            font-size: 0.65rem;
+            color: var(--color-text-muted);
+            margin: 0;
+            flex-shrink: 0;
+        }
+
+        .meta-item {
+            display: flex;
+            align-items: center;
+            white-space: nowrap;
         }
 
         .record-tags {
             display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            margin-bottom: 1rem;
+            align-items: center;
+            gap: 0.25rem;
+            margin: 0;
+            flex-shrink: 0;
         }
 
         .tag {
             background: linear-gradient(135deg, var(--color-warning), var(--color-success));
             color: var(--color-text-primary);
-            padding: 0.25rem 0.75rem;
-            border-radius: 16px;
-            font-size: 0.75rem;
+            padding: 0.1rem 0.3rem;
+            border-radius: 4px;
+            font-size: 0.55rem;
             font-weight: 500;
+            line-height: 1;
+            white-space: nowrap;
         }
 
         .record-link {
             display: inline-flex;
             align-items: center;
-            gap: 0.5rem;
             color: var(--color-secondary);
             text-decoration: none;
             font-weight: 500;
-            font-size: 0.875rem;
-            padding: 0.5rem 1rem;
+            font-size: 0.65rem;
+            padding: 0.2rem 0.4rem;
             background: rgba(97, 135, 148, 0.1);
-            border-radius: var(--border-radius);
+            border-radius: 4px;
             transition: var(--transition);
+            white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .record-link:hover {
@@ -601,6 +621,7 @@
             font-size: 1.5rem;
             margin-bottom: 1.5rem;
             opacity: 0.7;
+            display: none;
         }
 
         .empty-title {
@@ -657,6 +678,14 @@
         }
 
         /* Responsive Design */
+        @media (max-width: 1400px) {
+            .app-container {
+                grid-template-columns: 420px 1fr;
+                gap: 2.5rem;
+                padding: 1.5rem;
+            }
+        }
+
         @media (max-width: 1024px) {
             .app-container {
                 grid-template-columns: 1fr;
@@ -718,7 +747,6 @@
         <div class="form-card">
             <div class="form-header">
                 <h2 class="form-title">
-                    <div class="form-title-icon">📝</div>
                     Nouvel ADR
                 </h2>
             </div>
@@ -773,10 +801,10 @@
 
                     <div class="button-group">
                         <button type="submit" class="btn btn-primary">
-                            ✨ Ajouter l'ADR
+                            Ajouter l'ADR
                         </button>
                         <button type="button" class="btn btn-secondary" onclick="clearForm()">
-                            🔄 Réinitialiser
+                            Réinitialiser
                         </button>
                     </div>
                 </form>
@@ -788,13 +816,12 @@
         <div class="records-container">
             <div class="records-header">
                 <div class="records-title">
-                    📚 ADRs récents
+                    ADRs récents
                     <span class="records-count" id="recordsCount">0</span>
                 </div>
 
                 <div class="search-section">
                     <div class="search-bar">
-                        <span class="search-icon">🔍</span>
                         <input type="text" id="searchInput" class="search-input"
                                placeholder="Rechercher dans les ADRs (nom, projet, rédacteur, tags...)">
                         <button class="clear-search" id="clearSearch" onclick="clearSearch()">✕</button>
@@ -1164,7 +1191,6 @@
 
             recordsList.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-icon">📋</div>
                         <div class="empty-title">Aucun ADR trouvé</div>
                         <div class="empty-description">${emptyMessage}</div>
                     </div>
@@ -1178,31 +1204,23 @@
         recordsList.innerHTML = records.map(record => `
                 <div class="record-item">
                     <div class="record-content">
-                        <div class="record-name">${escapeHtml(record.name)}</div>
-                        ${record.projectName ? `
-                            <div class="project-name">
-                                🚀 ${escapeHtml(record.projectName)}
+                        <div class="record-main-info">
+                            <div class="record-name">${escapeHtml(record.name)}</div>
+                            ${record.projectName ? `<div class="project-name">${escapeHtml(record.projectName)}</div>` : ''}
+                            <div class="record-meta">
+                                <div class="meta-item">${escapeHtml(record.redactor)}</div>
+                                <div class="meta-item">${formatDate(record.timestamp)}</div>
                             </div>
-                        ` : ''}
-                        <div class="record-meta">
-                            <div class="meta-item">
-                                <span class="meta-icon">👤</span>
-                                ${escapeHtml(record.redactor)}
-                            </div>
-                            <div class="meta-item">
-                                <span class="meta-icon">📅</span>
-                                ${formatDate(record.timestamp)}
-                            </div>
-                        </div>
-                        ${record.tags ? `
-                            <div class="record-tags">
-                                ${record.tags.split(',').map(tag =>
+                            ${record.tags ? `
+                                <div class="record-tags">
+                                    ${record.tags.split(',').map(tag =>
             `<span class="tag">${escapeHtml(tag.trim())}</span>`
         ).join('')}
-                            </div>
-                        ` : ''}
+                                </div>
+                            ` : ''}
+                        </div>
                         <a href="${record.docLink}" target="_blank" class="record-link">
-                            📄 Consulter le document
+                            Consulter
                         </a>
                     </div>
                 </div>
