Fix tab switching

--- a/index.html
+++ b/index.html
@@ -980,13 +980,31 @@
 
     // Tab switching functionality
     function switchTab(tabName) {
+        console.log('Switching to tab:', tabName);
+
         // Update tab buttons
-        document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
+        document.querySelectorAll('.tab-button').forEach(btn => {
+            btn.classList.remove('active');
+        });
+
+        // Add active class to the clicked button
         event.target.classList.add('active');
 
-        // Update tab content
-        document.querySelectorAll('.tab-content').forEach(content => content.classList.remove('active'));
-        document.getElementById(tabName + 'Tab').classList.add('active');
+        // Hide all tab content explicitly
+        document.querySelectorAll('.tab-content').forEach(content => {
+            content.classList.remove('active');
+            content.style.display = 'none'; // Force hide
+        });
+
+        // Show the target tab explicitly
+        const targetTab = document.getElementById(tabName + 'Tab');
+        if (targetTab) {
+            targetTab.classList.add('active');
+            targetTab.style.display = 'flex'; // Force show
+            console.log('Activated tab:', tabName + 'Tab');
+        } else {
+            console.error('Tab not found:', tabName + 'Tab');
+        }
     }
 
     // Load existing records when page loads
